Update from June 3, 2023

--- a/70888-h/70888-h.htm
+++ b/70888-h/70888-h.htm
@@ -138,7 +138,7 @@ p.caption {
 </head>
 
 <body>
-<p style='text-align:center; font-size:1.2em; font-weight:bold'>The Project Gutenberg eBook of On the relative motion of the earth and the luminiferous ether, by Albert Abraham Moseley</p>
+<p style='text-align:center; font-size:1.2em; font-weight:bold'>The Project Gutenberg eBook of On the relative motion of the Earth and the luminiferous æther, by Albert Abraham Moseley</p>
 <div style='display:block; margin:1em 0'>
 This eBook is for the use of anyone anywhere in the United States and
 most other parts of the world at no cost and with almost no restrictions
@@ -149,13 +149,13 @@ are not located in the United States, you will have to check the laws of the
 country where you are located before using this eBook.
 </div>
 
-<p style='display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em'>Title: On the relative motion of the earth and the luminiferous ether</p>
+<p style='display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em'>Title: On the relative motion of the Earth and the luminiferous æther</p>
 <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Authors: Albert Abraham Moseley</p>
 <p style='display:block; margin-top:0; margin-bottom:0; margin-left:2em;'>Edward Morley</p>
-<p style='display:block; text-indent:0; margin:1em 0'>Release Date: May 31, 2023 [eBook #70888]</p>
+<p style='display:block; text-indent:0; margin:1em 0'>Release Date: June 3, 2023 [eBook #70888]</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Language: English</p>
   <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em; text-align:left'>Produced by: Laura Natal Rodrigues (Images generously made available by The Internet Archive.)</p>
-<div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK ON THE RELATIVE MOTION OF THE EARTH AND THE LUMINIFEROUS ETHER ***</div>
+<div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK ON THE RELATIVE MOTION OF THE EARTH AND THE LUMINIFEROUS ÆTHER ***</div>
 
 <div class="chapter">
 <div style='text-align:center; font-size:0.9em;'>THE<br>
@@ -1203,7 +1203,7 @@ author of the former paper by M. A. Potier, of Paris, in the winter of
 
 </div>
 
-<div style='display:block; margin-top:4em'>*** END OF THE PROJECT GUTENBERG EBOOK ON THE RELATIVE MOTION OF THE EARTH AND THE LUMINIFEROUS ETHER ***</div>
+<div style='display:block; margin-top:4em'>*** END OF THE PROJECT GUTENBERG EBOOK ON THE RELATIVE MOTION OF THE EARTH AND THE LUMINIFEROUS ÆTHER ***</div>
 <div style='text-align:left'>
 
 <div style='display:block; margin:1em 0'>
